[package]
name = "vote_account_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
solana-program = { version = "1.18.0", path = "/home/hana/work/solana/solana/sdk/program" }
solana-sdk = "1.17"
solana-rpc-client = "1.17"
